- fix topic scrollbar showing up twice at narrow widths <https://what.thedailywtf.com/post/948190>

--- a/plugins/nodebb-plugin-tdwtf-customizations/custom.less
+++ b/plugins/nodebb-plugin-tdwtf-customizations/custom.less
@@ -531,6 +531,10 @@ div#taskbar.taskbar.navbar-fixed-bottom {
 
 	&.ready {
 		display: block !important;
+
+		@media (max-width: 991px) {
+			display: none !important;
+		}
 	}
 }
 
